[package]
name = "layer_sword"
version = "0.1.0"
authors = ["cutecutecat"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
ctor = "0.1"
flate2 = "1.0"
fs_extra = "1.2"
lazy_static = "1.4"
log = "0.4"
json = "0.12"
regex = "1.4"
sha2 = "0.9"
env_logger = "0.8.3"
tar = "0.4"
thiserror = "1.0"
walkdir = "2"





